--- a/IntroToPython/HW/HW1/HW1.ipynb
+++ b/IntroToPython/HW/HW1/HW1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,18 @@
      "output_type": "stream",
      "text": [
       "Welcome to PyMoney\n",
-      "Initial Money is 0\n",
-      "5\n",
-      "Current Money is -5\n",
-      "Current Money is 5\n",
-      "30\n",
-      "Current Money is -25\n",
-      "8\n",
-      "Current Money is -33\n"
+      "Initial Money is 0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/aronton/Course/IntroToPython/HW/HW1/HW1.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/aronton/Course/IntroToPython/HW/HW1/HW1.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     add \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mHow much you add ( ex lunch 10 )\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/aronton/Course/IntroToPython/HW/HW1/HW1.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m# print(int(add.split(\" \",1)[1]))\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/aronton/Course/IntroToPython/HW/HW1/HW1.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39m# print(add)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/aronton/Course/IntroToPython/HW/HW1/HW1.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m     money \u001b[39m=\u001b[39m money \u001b[39m+\u001b[39m \u001b[39mint\u001b[39m(add\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m1\u001b[39;49m)[\u001b[39m1\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/aronton/Course/IntroToPython/HW/HW1/HW1.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mif\u001b[39;00m(a \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mN\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/aronton/Course/IntroToPython/HW/HW1/HW1.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m     take \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mHow much you take ( ex lunch -10 or lunch 10 )\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -25,41 +29,49 @@
     "print(\"Welcome to PyMoney\")\n",
     "money = 0\n",
     "print(\"Initial Money is\", money)\n",
-    "continueOrNot = input(\"If you want to add or take money, key Y \")\n",
+    "continueOrNot = input(\"If you want to add or take money, key Y, N to exist \\n\")\n",
     "while (continueOrNot == \"Y\"):\n",
     "    \n",
-    "    a = input(\"add or take ? key Y or N\")\n",
+    "    a = input(\"add or take ? key Y or N\\n\")\n",
     "\n",
     "    if(a == \"Y\"):\n",
-    "        add = input(\"How much you add\")\n",
-    "        money = money + int(add)\n",
+    "        add = input(\"How much you add ( ex lunch 10 )\\n\")\n",
+    "        # print(int(add.split(\" \",1)[1]))\n",
+    "        # print(add)\n",
+    "        money = money + int(add.split(\" \",1)[1])\n",
     "    if(a == \"N\"):\n",
-    "        take = input(\"How much you take ( you can use format in -10 or 10)\")\n",
+    "        take = input(\"How much you take ( ex lunch -10 or lunch 10 )\\n\")\n",
     "        if(take[0] == \"-\"):\n",
-    "            money = money - int(take[1:])\n",
+    "            take = int(take.split(\" \",1)[1])\n",
+    "            take = int(take.split(\"-\",1)[1])\n",
+    "            money = money - int(take.split(\" \",1)[1])\n",
     "        else:\n",
+    "            take = int(take.split(\" \",1)[1])\n",
     "            money = money - int(take)\n",
     "            \n",
     "    print(\"Current Money is\", money)\n",
-    "    continueOrNot = input(\"If you want to continue to add or take money, key Y \")\n"
+    "    continueOrNot = input(\"If you want to continue to add or take money, key Y\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'10000'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "take = \"-10\"\n",
-    "print(take[0])\n"
+    "take = \"-10000\"\n",
+    "take.split(\"-\",1)[1]"
    ]
   },
   {
@@ -81,6 +93,27 @@
    "source": [
     "ok = \"Y\"\n",
     "ok == \"N\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"ttt 7\"\n",
+    "int(a.split(\" \",1)[1])"
    ]
   },
   {
