--- a/IntroToProgramming/Context/L1/L1_practice.ipynb
+++ b/IntroToProgramming/Context/L1/L1_practice.ipynb
@@ -34,8 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "typedef struct node{\n",
@@ -50,7 +54,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -71,7 +79,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -99,7 +111,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": [
     "Node * Creat(int val)\n",
@@ -114,7 +130,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -146,7 +166,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -179,7 +203,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "c++"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -194,7 +222,7 @@
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
-   "name": "c++",
+   "name": "C++11",
    "version": "11"
   },
   "orig_nbformat": 4
